# rs-1brc

./: .gitignore  Cargo.toml  Learnings.md  README.md  docker-compose.yaml
src/: Learnings.md  Notes.md  main.rs  util.rs
