[package]
name = "rs-1brc"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.13.0"
opentelemetry_sdk = "0.20.0"
opentelemetry-semantic-conventions = "0.12.0"
tokio = { version = "1.26.0", features = [
    "macros",
    "rt-multi-thread",
    "parking_lot",
] }