[package]
name = "rs-1brc"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
rust_decimal = "1.34"
rustc-hash = { version = "1.0"}
fast-float = "0.2"
memchr = { version = "2", default-features = false }
num_cpus = "1.0"
rayon = "1.8"
memmap2 = "0.9.4"
ahash = "0.8.11"
hashbrown = "0.14.3"
bstr = "1.9.1"
crossbeam-channel = "0.5.10"


